--- a/css/intro.scss
+++ b/css/intro.scss
@@ -21,6 +21,7 @@
         background-image: url(../images/training-bg.jpg);
         position: relative;
         top: auto;
+        bottom: 0;
         left: auto;
         right: auto;
         min-height: 400px;
