--- a/css/all.css
+++ b/css/all.css
@@ -431,11 +431,11 @@ Extenders
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
   background-color: transparent !important; }
 
-.social-link-bar .navbar-default .navbar-toggle:hover, .social-link-bar .navbar-default .navbar-toggle:focus, .social-link-bar .navbar-toggle {
-  background-color: #44aeea !important; }
-
 .page-template-landing-page #primary-navigation-wrapper {
-  background-color: transparent; }
+  background-color: transparent;
+  -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  -moz-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0); }
 
 .vjs-default-skin {
   color: #ccc; }
@@ -3681,6 +3681,11 @@ a img.aligncenter {
 .cmn-toggle-switch__htx.active span::before,
 .cmn-toggle-switch__htx.active span::after {
   transition-delay: 0s, 0.3s; }
+
+.bottom-menu .cmn-toggle-switch {
+  background: #eaeaa; }
+  .bottom-menu .cmn-toggle-switch span {
+    background: #44aeea; }
 
 #footer {
   background: #333;
