--- a/css/toggle.scss
+++ b/css/toggle.scss
@@ -128,7 +128,7 @@ $button-trans-delay: 0.3s;
 
 .bottom-menu {
   .cmn-toggle-switch {
-    background: #eaeaa;
+    background: #eaeaea;
     span {
       background: $gsBlue;
       &::before,
@@ -136,6 +136,6 @@ $button-trans-delay: 0.3s;
         background-color: $gsBlue;
       }
     }
-  }     
+  }
 }
 
