intro video fallback image

--- a/css/all.css
+++ b/css/all.css
@@ -1138,7 +1138,7 @@ body.vjs-full-window {
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
-        background-image: url(../images/training-bg.jpg);
+        background-image: url(../images/gs-cover-photo.jpg);
         position: relative;
         top: auto;
         left: auto;
