--- a/css/all.css
+++ b/css/all.css
@@ -1429,6 +1429,9 @@ body.vjs-full-window {
   margin-top: 30px;
   margin-bottom: 50px; }
 
+#collaborators img {
+  max-height: 67px; }
+
 #petition-wrap {
   color: #333; }
 
