--- a/css/all.css
+++ b/css/all.css
@@ -2931,7 +2931,8 @@ body.vjs-full-window {
 #team-graphic li {
   max-width: 16.66%;
   display: block;
-  float: left; }
+  float: left;
+  min-height: 240px; }
   @media only screen and (max-width: 991px) {
     #team-graphic li {
       max-width: 33.33%; } }
