--- a/css/team.scss
+++ b/css/team.scss
@@ -3,6 +3,7 @@
     max-width: 16.66%;
     display: block;
     float: left;
+    min-height: 240px;  
       @include desktops {
         max-width: 33.33%;
       }
