--- a/css/all.css
+++ b/css/all.css
@@ -3520,7 +3520,7 @@ a img.aligncenter {
   margin: 5px 20px 20px 0; }
 
 .wp-caption.alignleft {
-  margin: 5px 20px 20px 0; }
+  margin: 0 20px 20px 0; }
 
 .wp-caption.alignright {
   margin: 5px 0 20px 20px; }
