--- a/css/wordpress-core.scss
+++ b/css/wordpress-core.scss
@@ -51,7 +51,7 @@ a img.aligncenter {
 }
 
 .wp-caption.alignleft {
-  margin: 5px 20px 20px 0;
+  margin: 0 20px 20px 0;    
 }
 
 .wp-caption.alignright {
