--- a/css/all.scss
+++ b/css/all.scss
@@ -61,7 +61,9 @@ p {
   padding: 3px;
   @include border-radius(5px);
 }
-
+td, th {
+  padding: 4px;
+}
 .no-border {
   @include box-shadow(0,0);
   border: 0;
